# Monet

./: README.md  clipper.py  function_plotter.py  geometry_ref.py  main.py  plotter.py  plotter_ref.py  pyproject.toml  sample.py  sampler.py  scientific.mplstyle  scientific_ref.mplstyle  special_functoins.md
examples/: gamma.py
src/fplotter/: __init__.py  clipper.py  fplotter.py  refiner.py  resampler.py  sample.py  sampler.py  types.py
src/plotter/: plotter.py  types.py  validator.py
src/plotter/styles/: scientific.mplstyle
src/validator/: iterable.py  path.py  primitive.py  tuple.py
tests/: conftest.py
tests/fplotter/: test_clipper.py  test_fplotter.py  test_functions.py  test_refiner.py  test_resampler.py  test_sample.py  test_sampler.py
tests/fplotter/hashes/: test_plotter_contour.sha256  test_plotter_heatmap.sha256  test_plotter_line.sha256
tests/plotter/: conftest.py  test_plotter.py
tests/plotter/hashes/: test_plotter_contour.sha256  test_plotter_heatmap.sha256  test_plotter_line.sha256
